--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
+    "resolutions": {
+      "graphql": "^15.4.0",
+      "graphql-compose": "^7.25.0",
+      "webpack": "^5.24.2"
+    },
   "license": "MIT",
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
     "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
     "framer-motion": "^3.7.0",
-    "gatsby": "^2.32.3",
+    "gatsby": "^3.0.0",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^3.0.0",
