--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
-    "resolutions": {
-      "graphql": "^15.4.0",
-      "graphql-compose": "^7.25.0",
-      "webpack": "^5.24.2"
-    },
+  "resolutions": {
+    "graphql": "^15.4.0",
+    "graphql-compose": "^7.25.0",
+    "webpack": "^5.24.2"
+  },
   "license": "MIT",
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.31.0",
+    "react-scripts": "^5.0.1",
     "react-xmasonry": "^3.0.5",
     "styled-components": "^5.2.1"
   }
